# ReadToMe-TTS

./: .gitignore  CHANGELOG.md  README.md  build-linux.sh  build.bat  download-voices.ps1  download-voices.sh  pyproject.toml  readtome.spec  run-dev.ps1  run-dev.sh  setup-wine.sh
hooks/: hook-sounddevice.py
installer/: ReadToMe_Setup.iss
readtome/: __init__.py  __main__.py  app.py  audio_player.py  config.py  hotkey.py  tray.py  tts_engine.py  updater.py
